Read in all of SOLR stdout/stderr so that process continues to run.  Made server singleton